# python-package-template

./: .gitignore  PACKAGE_README.md  README.md  pyproject.toml  setup.fish
config/: config.toml
package_name/: analysis.py  package_name.py
package_name/util/: debug.py  file.py  logger.py  plot.py
tests/util/: test_file.py  test_plot.py
