[tool.poetry]
name = "package_name"
version = "0.1.0"
description = ""
authors = ["scepter914 <scepter914@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-json-logger = "^2.0.0"
toml = "^0.10.2"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^22.12.0"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
